...
    <string name="dificultad_r" translatable="false">Dificultad para respirar</string>
    <string name="dolor_pecho" translatable="false">Dolor o presión en el pecho</string>
    <string name="incapacidad" translatable="false">Incapacidad para hablar o moverse</string>
    <string name="title_activity_hospital_maps">Map</string>


    <string name="textoPreguntaMenu1" translatable="false">"Evitan que contagies, pero te puedes contagiar tu."</string>
    <string name="textoPreguntaMenu2" translatable="false">"Manténgase aislada 14 días a espera de los resultados de la pcr o en caso de no poder hacérsela espere por síntomas."</string>
    <string name="textoPreguntaMenu3" translatable="false">"Las investigaciones indican que los niños y los adolescentes tienen las mismas probabilidades de infectarse que cualquier otro grupo de edad y pueden propagar la enfermedad."</string>
    <string name="textoPreguntaMenu4" translatable="false">"No, pero es cierto que si coincides en diversos sintomas podria ser un indicativo de que padeces covid."</string>
    <string name="textoPreguntaMenu5" translatable="false">"las mascarillas N95,KN95,KF94 o Kf95 son una buena opcion las FFP2 tambien pero las FFP3 estan reservadas para personal sanitario."</string>
    <string name="textoPreguntaMenu6" translatable="false">"Si te indentificas con alguno de estos grupos perteneces a la poblacion de riesgo personas que tienen más de 60 años, enfermedades cardiovasculares e hipertensión arterial, diabetes, enfermedades pulmonares crónicas, cáncer, inmunodepresión, embarazo."</string>
    <string name="limpiar">Limpiar</string>
...
